# LLMKG

./: .env  README.md  main_orchestrator.py  pyproject.toml
_3_knowledge_extraction/document_aware_extraction/: __init__.py
_4_knowledge_graph_operations/: inter_document_merger.py
_5_transformations/: transform_json.py
examples/: knowledge_graph_AIRELLE_gpt-4.1-mini.html  knowledge_graph_AIRELLE_gpt-4.1-mini.json  knowledge_graph_AIRELLE_gpt-4.1.html  knowledge_graph_AIRELLE_gpt-4.1.json  knowledge_graph_AIRELLE_gpt-4o.html  knowledge_graph_AIRELLE_gpt-4o.json  knowledge_graph_DECK_gpt-4.1-mini.html  knowledge_graph_DECK_gpt-4.1-mini.json  knowledge_graph_DECK_gpt-4.1.html  knowledge_graph_DECK_gpt-4.1.json  knowledge_graph_DECK_gpt-4o.html  knowledge_graph_DECK_gpt-4o.json  knowledge_graph_EXAMPLE_gpt-4.1_batch.html  knowledge_graph_EXAMPLE_gpt-4.1_batch.json  knowledge_graph_EXAMPLE_gpt-4.1_iterative.html  knowledge_graph_EXAMPLE_gpt-4.1_iterative.json
llm_kg_extraction/: KG_builder.py  KG_builder_iterative.py  KG_evaluator.py  KG_visualizer.py  company_identifier.py  fixed_System.html  llm-client.py  llm_client.py  main.py  main_multimodal.py  main_orchestrator.py  merged_kg_builder.py  merged_kg_builder2.py  merged_kg_builder3.py  merged_kg_builder_firstversion.py  merger_diagnostic_tool.py  multimodal_kg_builder.py  multimodal_kg_builder_iterative.py  project_pipeline_orchestrator.py  split_json_outputs.py  testing.py  transform_json.py  vertexAI_test.ipynb
llm_kg_extraction/CLAUDE/: benchmark_kg_builder.py  enhanced_kg_builder.py  kg_builder_orchestrator.py  (+3 more)
(+781 files in other folders)
